--- a/FrankBlogs/package.json
+++ b/FrankBlogs/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "express-sanitizer": "^1.0.4",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.14"
   }
